--- a/main.css
+++ b/main.css
@@ -1,34 +1,108 @@
-
-body{
+body {
     background-image: url('assets/images/bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+}
+.container {
+    background-color: rgba(255,255,255,0.8);
+    width: 75%;
+    margin: 0 auto;
+    padding: 20px;
+    color: #003c7c;
+}
+
+.fonttitle {
+    font-family: 'Lora', serif;
+}
+.fontheader {
+    font-family: 'Lora', serif;
+}
+
+.text-white{
+    color: white;
 
 }
-.card{background-color: rgba(255,255,255,0.8)}
+.text-center{
+    text-align: center;
+}
+
 .card-header{
     text-align: center;
     font-size: 25pt;
-    font-weight: bold;
-    color: black;
-
+    margin: 25px 0 0;
 }
-.inputText {
+.card-body{
+    width: 100%;
+    margin: auto;
+}
+.translatebutton {
+    border: solid black thin;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    background-color: #003c7c;
+    color: white;
+    display: block;  
+    margin: 10px 0;
+} 
+.inputLanguageCode {
+    display: block;
+    font-size: 16px;
+    border: solid black thin;
+    padding: 2px;
     margin-bottom: 20pt;
     margin-top: 0pt !important; 
 }
-.inputLanguageCode{
-    margin-bottom: 20pt;
-    margin-top: 0pt !important; 
-}
-h5{
-    margin-bottom: 2pt !important;
+h5, p.translated_text {
+    margin-bottom: 8pt !important;
     margin-top:  0pt !important;
     margin-left: 5pt !important;
-    color: black;
+    color: #003c7c;;
     font-size: 20pt;
     font-weight: bold;
 }
- .hide{
-     display: none;
- }
+.hide{
+    display: none;
+}
+
+.translatedTextContainer {
+    width: 49%;
+    display: inline-block;
+    height: 300px;
+}
+
+.translateText {
+    width: 49%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+textarea#inputtext {
+    width: 100%;
+    height: 190px;
+    font-size: 20px;
+    padding: 10px;
+}
+
+p.translated_text.fonttext {
+    background-color: #ccc;
+    border: 1px solid #aba9a9;
+    height: 170px;
+    margin: 0;
+    font-size: 20px;
+    padding: 10px;
+}
+
+.font20 {
+    font-size: 20px;
+}
+
+@media only screen and (max-width: 500px) {
+    .translatedTextContainer,
+    .translateText {
+        width: 100%;
+    }
+    .inputLanguageCode {
+        width: 100%;
+    }
+}
